--- a/index.html
+++ b/index.html
@@ -1,179 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technical Documentation Page</title>
-</head>
-<body>
-
-  <nav id="navbar">
-    <header>
-    <h1>JS Documentation</h1>
-    </header>
-    <hr>
-    <p><a class="nav-link" href="#section1">Introduction</a></p>
-    <hr>
-    <p><a class="nav-link" href="">What you should already know</a></p>
-    <hr>
-    <p><a class="nav-link" href="">JavaScript and Java</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Hello world</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Variables</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Declaring variables</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Variable scope</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Global variables</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Constants</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Data types</a></p>
-    <hr>
-    <p><a class="nav-link" href="">if...else statement</a></p>
-    <hr>
-    <p><a class="nav-link" href="">while statement</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Function declarations</a></p>
-    <hr>
-    <p><a class="nav-link" href="">Reference</a></p>
-  </nav>
+  </head>
+  <body>
+    <nav id="navbar">
+      <header>
+        <h1>JS Documentation</h1>
+      </header>
+      <hr />
+      <p><a class="nav-link" href="#section1">Introduction</a></p>
+      <hr />
+      <p>
+        <a class="nav-link" href="#section2">What you should already know</a>
+      </p>
+      <hr />
+      <p><a class="nav-link" href="#section3">JavaScript and Java</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section4">Hello world</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section5">Variables</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section6">Declaring variables</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section7">Variable scope</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section8">Global variables</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section9">Constants</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section10">Data types</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section11">if...else statement</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section12">while statement</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section13">Function declarations</a></p>
+      <hr />
+      <p><a class="nav-link" href="#section14">Reference</a></p>
+    </nav>
     <main id="main-doc">
       <section id="section1" class="main-section">
         <header>
-         <h1>Introduction</h1>
+          <h1>Introduction</h1>
         </header>
         <p>
-          JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.
-<br>
-JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:
+          JavaScript is a cross-platform, object-oriented scripting language. It
+          is a small and lightweight language. Inside a host environment (for
+          example, a web browser), JavaScript can be connected to the objects of
+          its environment to provide programmatic control over them.
+          <br />
+          JavaScript contains a standard library of objects, such as Array,
+          Date, and Math, and a core set of language elements such as operators,
+          control structures, and statements. Core JavaScript can be extended
+          for a variety of purposes by supplementing it with additional objects;
+          for example:
         </p>
         <ul>
-          <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.</li>
-          <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.</li>
+          <li>
+            Client-side JavaScript extends the core language by supplying
+            objects to control a browser and its Document Object Model (DOM).
+            For example, client-side extensions allow an application to place
+            elements on an HTML form and respond to user events such as mouse
+            clicks, form input, and page navigation.
+          </li>
+          <li>
+            Server-side JavaScript extends the core language by supplying
+            objects relevant to running JavaScript on a server. For example,
+            server-side extensions allow an application to communicate with a
+            database, provide continuity of information from one invocation to
+            another of the application, or perform file manipulations on a
+            server.
+          </li>
         </ul>
-  </section>
+      </section>
 
       <section id="section2" class="main-section">
         <header>
-         <h1> What you should already know</h1>
+          <h1>What you should already know</h1>
         </header>
-        <p>This guide assumes you have the following basic background:
-</p>
-<ul>
-  <li>A general understanding of the Internet and the World Wide Web (WWW).
-</li>
-  <li>Good working knowledge of HyperText Markup Language (HTML).
-</li>
-  <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.
-</li>
-</ul>
+        <p>This guide assumes you have the following basic background:</p>
+        <ul>
+          <li>
+            A general understanding of the Internet and the World Wide Web
+            (WWW).
+          </li>
+          <li>Good working knowledge of HyperText Markup Language (HTML).</li>
+          <li>
+            Some programming experience. If you are new to programming, try one
+            of the tutorials linked on the main page about JavaScript.
+          </li>
+        </ul>
       </section>
 
       <section id="section3" class="main-section">
-        <header>  
-<h1>
-  JavaScript and Java
-</h1>
-<p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.
-<br>
-In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.
-<br>
-JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.
-</p>
+        <header>
+          <h1>JavaScript and Java</h1>
         </header>
+        <p>
+          JavaScript and Java are similar in some ways but fundamentally
+          different in some others. The JavaScript language resembles Java but
+          does not have Java's static typing and strong type checking.
+          JavaScript follows most Java expression syntax, naming conventions and
+          basic control-flow constructs which was the reason why it was renamed
+          from LiveScript to JavaScript.
+          <br />
+          In contrast to Java's compile-time system of classes built by
+          declarations, JavaScript supports a runtime system based on a small
+          number of data types representing numeric, Boolean, and string values.
+          JavaScript has a prototype-based object model instead of the more
+          common class-based object model. The prototype-based model provides
+          dynamic inheritance; that is, what is inherited can vary for
+          individual objects. JavaScript also supports functions without any
+          special declarative requirements. Functions can be properties of
+          objects, executing as loosely typed methods.
+          <br />
+          JavaScript is a very free-form language compared to Java. You do not
+          have to declare all variables, classes, and methods. You do not have
+          to be concerned with whether methods are public, private, or
+          protected, and you do not have to implement interfaces. Variables,
+          parameters, and function return types are not explicitly typed.
+        </p>
+      </section>
       <section id="section4" class="main-section">
         <header>
           <h1>Hello world</h1>
         </header>
-<p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:
-</p>
-<code class="code">function greetMe(yourName) { alert("Hello " + yourName); }
-  <br>
-greetMe("World");</code>
-<p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!
-</p>
+        <p>
+          To get started with writing JavaScript, open the Scratchpad and write
+          your first "Hello world" JavaScript code:
+        </p>
+        <code class="code"
+          >function greetMe(yourName) { alert("Hello " + yourName); }
+          <br />
+          greetMe("World");</code
+        >
+        <p>
+          Select the code in the pad and hit Ctrl+R to watch it unfold in your
+          browser!
+        </p>
+      </section>
       <section id="section5" class="main-section">
         <header>
           <h1>Variables</h1>
         </header>
         <p>
-          You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.
-<br>
-A JavaScript identifier must start with a letter, underscore (_), or dollar sign ($); subsequent characters can also be digits (0-9). Because JavaScript is case sensitive, letters include the characters "A" through "Z" (uppercase) and the characters "a" through "z" (lowercase).
-<br>
-You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.
+          You use variables as symbolic names for values in your application.
+          The names of variables, called identifiers, conform to certain rules.
+          <br />
+          A JavaScript identifier must start with a letter, underscore (_), or
+          dollar sign ($); subsequent characters can also be digits (0-9).
+          Because JavaScript is case sensitive, letters include the characters
+          "A" through "Z" (uppercase) and the characters "a" through "z"
+          (lowercase).
+          <br />
+          You can use ISO 8859-1 or Unicode letters such as å and ü in
+          identifiers. You can also use the Unicode escape sequences as
+          characters in identifiers. Some examples of legal names are
+          Number_hits, temp99, and _name.
         </p>
+      </section>
       <section id="section6" class="main-section">
         <header>
-          <h1>
-            Declaring variables
-          </h1>
+          <h1>Declaring variables</h1>
         </header>
-          <p>
-            You can declare a variable in three ways:
-            <br>
-With the keyword var. For example,
-          </p>
-          <code class="code">
-            var x = 42.
-          </code>
-          <p>
-            This syntax can be used to declare both local and global variables.
-<br>
-By simply assigning it a value. For example,
-          </p>
-          <code class="code">
-            x = 42.
-          </code>
-          <p>
-            This always declares a global variable. It generates a strict JavaScript warning. You shouldn't use this variant.
-<br>
-With the keyword let. For example,
-          </p>
-          <code class="code">
-            let y = 13.
-          </code>
-          <p>This syntax can be used to declare a block scope local variable. See Variable scope below.
-
-</p>
+        <p>
+          You can declare a variable in three ways:
+          <br />
+          With the keyword var. For example,
+        </p>
+        <code class="code"> var x = 42. </code>
+        <p>
+          This syntax can be used to declare both local and global variables.
+          <br />
+          By simply assigning it a value. For example,
+        </p>
+        <code class="code"> x = 42. </code>
+        <p>
+          This always declares a global variable. It generates a strict
+          JavaScript warning. You shouldn't use this variant.
+          <br />
+          With the keyword let. For example,
+        </p>
+        <code class="code"> let y = 13. </code>
+        <p>
+          This syntax can be used to declare a block scope local variable. See
+          Variable scope below.
+        </p>
+      </section>
 
       <section id="section7" class="main-section">
         <header>
-          <h1>
-            Variable scope
-          </h1>
+          <h1>Variable scope</h1>
         </header>
         <p>
-          When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function.
-<br>
-JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following code will log 5, because the scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement.
+          When you declare a variable outside of any function, it is called a
+          global variable, because it is available to any other code in the
+          current document. When you declare a variable within a function, it is
+          called a local variable, because it is available only within that
+          function.
+          <br />
+          JavaScript before ECMAScript 2015 does not have block statement scope;
+          rather, a variable declared within a block is local to the function
+          (or global scope) that the block resides within. For example the
+          following code will log 5, because the scope of x is the function (or
+          global context) within which x is declared, not the block, which in
+          this case is an if statement.
         </p>
         <code class="code">
           if (true) { var x = 5; } console.log(x); // 5
         </code>
         <p>
-          This behavior changes, when using the let declaration introduced in ECMAScript 2015.
+          This behavior changes, when using the let declaration introduced in
+          ECMAScript 2015.
         </p>
         <code class="code">
           if (true) { let y = 5; } console.log(y); // ReferenceError: y is
-          <br>
-not defined
+          <br />
+          not defined
         </code>
+      </section>
+
       <section id="section8" class="main-section">
         <header>
-          <h1>
-            Global variables
-          </h1>
+          <h1>Global variables</h1>
         </header>
         <p>
-          Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.
-<br>
-Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.
+          Global variables are in fact properties of the global object. In web
+          pages the global object is window, so you can set and access global
+          variables using the window.variable syntax.
+          <br />
+          Consequently, you can access global variables declared in one window
+          or frame from another window or frame by specifying the window or
+          frame name. For example, if a variable called phoneNumber is declared
+          in a document, you can refer to this variable from an iframe as
+          parent.phoneNumber.
         </p>
-        
+      </section>
     </main>
-</body>
+  </body>
 </html>
