--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technical Documentation Page</title>
-  </head>
+<link rel="stylesheet" href="styles.css">  </head>
   <body>
     <nav id="navbar">
       <header>
         <h1>JS Documentation</h1>
       </header>
       <hr />
-      <p><a class="nav-link" href="#_Introduction">Introduction</a></p>
+      <p><a class="nav-link" href="#Introduction">Introduction</a></p>
       <hr />
       <p>
-        <a class="nav-link" href="#_What-you-should-already-know"
+        <a class="nav-link" href="#What_you_should_already_know"
           >What you should already know</a
         >
       </p>
